# CtCI-6th-Edition-Rust

./: .gitignore  Cargo.toml  readme.md
.github/workflows/: test.yml
src/: arena_graph.rs  binary_search_tree.rs  binary_tree.rs  dijkstra.rs  heap.rs  lib.rs  ptr.rs  ptr_list.rs  sort.rs  trie.rs
src/chapter_01/: mod.rs  p01_is_unique.rs  p02_check_permutation.rs  p03_urlify.rs  p04_palindrome_permutation.rs  p05_one_away.rs  p06_string_compression.rs  p07_rotate_matrix.rs  p08_zero_matrix.rs  p09_string_rotation.rs  utils.rs
src/chapter_02/: mod.rs  p01_remove_dups.rs  p02_return_kth_to_last.rs  p03_delete_middle_node.rs  p04_partition.rs  p05_sum_lists.rs  p06_palindrome.rs  p07_intersection.rs  p08_loop_detection.rs  utils.rs
src/chapter_03/: mod.rs  p01_three_in_one.rs  p02_stack_min.rs  p03_stack_of_plates.rs  p04_queue_via_stacks.rs  p05_sort_stack.rs  p06_animal_shelter.rs  utils.rs
src/chapter_04/: mod.rs  p01_route_between_nodes.rs  p02_minimal_tree.rs  p03_list_of_depths.rs  p04_check_balanced.rs  p05_validate_bst.rs  p06_successor.rs  p07_build_order.rs  p08_first_common_ancestor.rs  p09_bst_sequences.rs  p10_check_subtree.rs  p11_random_node.rs  p12_paths_with_sum.rs  utils.rs
src/chapter_05/: mod.rs  p01_insertion.rs  p02_binary_to_string.rs  p03_flip_bit_to_win.rs  p04_next_number.rs  p06_conversion.rs  p07_pairwise_swap.rs  p08_draw_line.rs
src/chapter_06/: mod.rs  p07_the_apocalypse.rs
src/chapter_07/: mod.rs  p04_parking_lot.rs
src/chapter_08/: mod.rs  p01_triple_step.rs  p02_robot_grid.rs  p03_magic_index.rs  p04_power_set.rs  (+10 more)
(+25 files in other folders)
